Creacion de CRUD de Servicios

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -150,6 +150,7 @@
     "/js/popper.min.js": "/js/popper.min.js",
     "/js/scrollIt.min.js": "/js/scrollIt.min.js",
     "/js/sticky-kit.min.js": "/js/sticky-kit.min.js",
+    "/js/sweerAlertDeleteConfirmation.js": "/js/sweerAlertDeleteConfirmation.js",
     "/js/YouTubePopUp.js": "/js/YouTubePopUp.js",
     "/vendors/js/blockui/blockui.min.js": "/vendors/js/blockui/blockui.min.js",
     "/vendors/js/bootstrap/bootstrap.min.js": "/vendors/js/bootstrap/bootstrap.min.js",
@@ -579,8 +580,14 @@
     "/vendors/css/maps/images/marker-icon-2x.png": "/vendors/css/maps/images/marker-icon-2x.png",
     "/vendors/css/maps/images/marker-icon.png": "/vendors/css/maps/images/marker-icon.png",
     "/vendors/css/maps/images/marker-shadow.png": "/vendors/css/maps/images/marker-shadow.png",
-    "/vendors/css/editors/quill/fonts/KaTeX_Main-Regular.woff2": "/vendors/css/editors/quill/fonts/KaTeX_Main-Regular.woff2",
-    "/vendors/css/editors/quill/fonts/KaTeX_Math-Italic.woff2": "/vendors/css/editors/quill/fonts/KaTeX_Math-Italic.woff2",
+    "/vendors/css/editors/quill/fonts/DidactGothic-Regular.ttf": "/vendors/css/editors/quill/fonts/DidactGothic-Regular.ttf",
+    "/vendors/css/editors/quill/fonts/Oswald-Bold.ttf": "/vendors/css/editors/quill/fonts/Oswald-Bold.ttf",
+    "/vendors/css/editors/quill/fonts/Oswald-ExtraLight.ttf": "/vendors/css/editors/quill/fonts/Oswald-ExtraLight.ttf",
+    "/vendors/css/editors/quill/fonts/Oswald-Light.ttf": "/vendors/css/editors/quill/fonts/Oswald-Light.ttf",
+    "/vendors/css/editors/quill/fonts/Oswald-Medium.ttf": "/vendors/css/editors/quill/fonts/Oswald-Medium.ttf",
+    "/vendors/css/editors/quill/fonts/Oswald-Regular.ttf": "/vendors/css/editors/quill/fonts/Oswald-Regular.ttf",
+    "/vendors/css/editors/quill/fonts/Oswald-SemiBold.ttf": "/vendors/css/editors/quill/fonts/Oswald-SemiBold.ttf",
+    "/vendors/css/editors/quill/fonts/Oswald-VariableFont_wght.ttf": "/vendors/css/editors/quill/fonts/Oswald-VariableFont_wght.ttf",
     "/fonts/Moonglade Bold.ttf": "/fonts/Moonglade Bold.ttf",
     "/fonts/Moonglade Regular.ttf": "/fonts/Moonglade Regular.ttf",
     "/fonts/Moonglade light.ttf": "/fonts/Moonglade light.ttf",
