CRUD Projectos y fix Servicios

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -148,6 +148,7 @@
     "/js/owl.carousel.min.js": "/js/owl.carousel.min.js",
     "/js/pace.js": "/js/pace.js",
     "/js/popper.min.js": "/js/popper.min.js",
+    "/js/quill-mb.js": "/js/quill-mb.js",
     "/js/scrollIt.min.js": "/js/scrollIt.min.js",
     "/js/sticky-kit.min.js": "/js/sticky-kit.min.js",
     "/js/sweerAlertDeleteConfirmation.js": "/js/sweerAlertDeleteConfirmation.js",
