--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     },
     "dependencies": {
         "bootstrap": "4.6.0",
-        "postcss-loader": "^6.1.1"
+        "postcss-loader": "^6.1.1",
+        "quill-image-resize": "^3.0.9",
+        "quill-image-resize-module": "^3.0.0"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.2.1",
