--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,9 +10,15 @@ updates:
     schedule:
       interval: "weekly"
     target-branch: "develop"
+    allow:
+      - dependency-type: "security"
+      - dependency-type: "major"
 
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
     target-branch: "develop"
+    allow:
+      - dependency-type: "security"
+      - dependency-type: "major"
