--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "require": {
     "php": "^7.3|^8.0",
+    "anhskohbo/no-captcha": "^3.6",
     "doctrine/dbal": "^3.6",
     "fideloper/proxy": "^4.4",
     "fruitcake/laravel-cors": "^3.0",
